# Spline

./: .gitignore  CMakeLists.txt  Crosssection.py  Doxyfile  README.md  k_eps0_M.csv  resources.py
.github/workflows/: Continuous_Integration.yml
cmake/modules/: doxygen.cmake  gtest.cmake  openmp.cmake  spdlog.cmake
src/: Spline.cpp
src/geom/: shoelace.cpp  shoelace.h
src/inputreader/: prep.cpp  prep.h
src/kappamoment/: crosssection.h  sectioncal.cpp  sectioncal.h
src/points/: points.h
src/python/: pybinding.cpp
src/simulation/: simulation.cpp  simulation.h
tests/: TestEnvironment.cpp
tests/geom/: shoelacetest.cpp
tests/points/: pointstest.cpp
tests/prep/: preptest.cpp
z_python_spline/: plotgraph.py  rand_graph_gen.py  spline.py  spline2.py  spline_ref.py  test.py  testm0.py
